--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DDB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=wmmis_data_center
+DB_DATABASE=wmmis_data
 DB_USERNAME=root
 DB_PASSWORD=64y7nudx
 
