--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "queue:start": "npm run queue:remove && pm2 start process.yml",
+        "queue:remove": "pm2 delete process.yml"
     },
     "devDependencies": {
         "axios": "^0.21",
