--- a/garbage/package.json
+++ b/garbage/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "mysql": "^2.18.1"
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "node-jsencrypt": "^1.0.0",
+    "node-rsa": "^1.1.1"
   }
 }
