--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "moment-timezone": "^0.5.31",
     "node-sass": "4.14.1",
     "qrcode": "^1.3.3",
+    "sass": "^1.55.0",
     "socket.io-client": "^2.3.0",
     "underscore": "^1.13.1",
     "vue": "^2.5.2",
