--- a/sass/.env
+++ b/sass/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:J+Rq8/wHblxrwTd9/Lra85Ct8t5i+gMnWHNkyJoa5o5=
+APP_KEY=base64:r0u+rFaFHcFH/dADrhENO0FiZ9YHylBN39JfAdtsIZw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -21,15 +21,9 @@ DB_DATABASE_SYS=wmmis_system
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-REDIS_SESSION_HOST=127.0.0.1
-REDIS_QUEUE_HOST=127.0.0.1
 
 FILESYSTEM_DRIVER=local
 
