--- a/sass/supervisor.conf
+++ b/sass/supervisor.conf
@@ -1,13 +1,13 @@
-[program:laravel-worker]
+[program:mis-sass-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /www/wwwroot/mis/sass/artisan queue:work sqs --sleep=3 --tries=3 --max-time=3600
+command=php /www/wwwroot/mis/sass/artisan queue:work --sleep=3 --tries=3 --max-time=3600
 directory=/www/wwwroot/mis/sass
 autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
-user=forge
+user=www
 numprocs=8
 redirect_stderr=true
-stdout_logfile=/www/wwwlogs/sass-worker.log
+stdout_logfile=/www/wwwlogs/mis-sass-worker.log
 stopwaitsecs=3600
