--- a/sass/.env
+++ b/sass/.env
@@ -37,12 +37,12 @@ REDIS_QUEUE_HOST=127.0.0.1
 REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.aliyun.com
+MAIL_PORT=465
+MAIL_USERNAME=ye_goodluck@aliyun.com
+MAIL_PASSWORD=25cec5d8
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=ye_goodluck@aliyun.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
