--- a/sass/.env
+++ b/sass/.env
@@ -22,11 +22,11 @@ DB_DATABASE_SYS=wmmis_system
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
+QUEUE_DRIVER=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 FILESYSTEM_DRIVER=local
-
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
