--- a/sass/.env
+++ b/sass/.env
@@ -72,3 +72,8 @@ MONGODB_PASSWORD=
 
 L5_SWAGGER_GENERATE_ALWAYS=true
 SWAGGER_VERSION=3.0
+
+PUSHER_APP_KEY=8e204de559072cfdc7c9
+PUSHER_APP_SECRET=12b116aee9c3505159bd
+PUSHER_APP_ID=1497414
+PUSHER_APP_CLUSTER=ap3
