--- a/sass/.env
+++ b/sass/.env
@@ -43,7 +43,7 @@ MAIL_USERNAME=ye_goodluck@aliyun.com
 MAIL_PASSWORD=25cec5d8
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=ye_goodluck@aliyun.com
-MAIL_FROM_NAME=ye_goodluck@aliyun.com
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
