--- a/sass/.env
+++ b/sass/.env
@@ -37,12 +37,12 @@ REDIS_QUEUE_HOST=127.0.0.1
 REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.aliyun.com
+MAIL_HOST=smtp.163.com
 MAIL_PORT=465
-MAIL_USERNAME=ye_goodluck@aliyun.com
-MAIL_PASSWORD=25cec5d8
+MAIL_USERNAME=maoxy_openplatform@163.com
+MAIL_PASSWORD=VSAAAZUKBWQBRWYF
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=ye_goodluck@aliyun.com
+MAIL_FROM_ADDRESS=maoxy_openplatform@163.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
