--- a/sass/.env
+++ b/sass/.env
@@ -21,7 +21,7 @@ DB_DATABASE_SYS=wmmis_system
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=redis
+QUEUE_CONNECTION=database
 QUEUE_DRIVER=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
