--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "moment": "2.26.0",
     "moment-timezone": "^0.5.31",
     "node-sass": "4.14.1",
+    "openai": "^3.1.0",
     "qrcode": "^1.3.3",
     "sass": "^1.55.0",
     "socket.io-client": "^2.5.0",
