--- a/backend/supervisor.conf
+++ b/backend/supervisor.conf
@@ -1,6 +1,6 @@
 [program:mis-data-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /www/wwwroot/mis/backend/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+command=php /www/wwwroot/mis/backend/artisan queue:work --sleep=3 --tries=3 --max-time=3600 --timeout=3600
 directory=/www/wwwroot/mis/backend
 autostart=true
 autorestart=true
